--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,38 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: "IbarraRealNova";
+    src: url(../public/fonts/IbarraRealNova-VariableFont_wght.ttf) format("truetype-variations");
+    font-weight: 400 700;
+    font-style: normal;
+}
+@font-face {
+    font-family: "IbarraRealNovaItalic";
+    src: url(../public/fonts/IbarraRealNova-Italic-VariableFont_wght.ttf) format("truetype-variations");
+    font-weight: 400 700;
+    font-style: italic;
+}
+@font-face {
+    font-family: "NotoSans";
+    src: url(../public/fonts/NotoSans-VariableFont_wdth\,wght.ttf) format("truetype-variations");
+    font-weight: 100 900;
+    font-style: normal;
+}
+@font-face {
+    font-family: "NotoSansItalic";
+    src: url(../public/fonts/NotoSans-Italic-VariableFont_wdth\,wght.ttf) format("truetype-variations");
+    font-weight: 100 900;
+    font-style: italic;
+}
+@layer base {
+    h1,h2,h3,h4,h5,h6 {
+        font-family: "IbarraRealNova", serif;
+        font-weight: 700;
+    }
+    body {
+        font-family: "NotoSans", sans-serif;
+        font-weight: 400;
+    }
+}
